# TradeChartEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Package.swift  README.md
TradeChartEngine.xcframework/: Info.plist
TradeChartEngine.xcframework/ios-arm64/Headers/tce/: tce.h  types.h
TradeChartEngine.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
TradeChartEngine.xcframework/ios-arm64_x86_64-simulator/Headers/tce/: tce.h  types.h
bindings/ios/: Package.swift  build_xcframework.sh
bindings/ios/Sources/TradeChartEngine/: Chart.swift  TradeChartView.swift
bindings/ios/Sources/TradeChartEngine/Internal/: MetalRenderer.swift
core/: CMakeLists.txt
core/include/tce/: tce.h  types.h
core/src/: api.cpp  chart.cpp  chart.h
core/src/data/: series.cpp  series.h  transforms.cpp  transforms.h
core/src/drawing/: drawing.cpp  drawing.h  drawing_renderer.cpp  drawing_renderer.h
core/src/indicator/: atr.cpp  atr.h  bollinger.cpp  bollinger.h  cci.cpp  cci.h  dmi.cpp  dmi.h  donchian.cpp  donchian.h  ema.cpp  ema.h  hma.cpp  hma.h  ichimoku.cpp  ichimoku.h  keltner.cpp  keltner.h  ma.cpp  ma.h  macd.cpp  macd.h  mfi.cpp  mfi.h  obv.cpp  obv.h  pivot.cpp  pivot.h  psar.cpp  psar.h  rsi.cpp  rsi.h  stoch_rsi.cpp  stoch_rsi.h  stochastic.cpp  stochastic.h  supertrend.cpp  supertrend.h  vwap.cpp  vwap.h  (+4 more)
core/src/overlay/: trade_markers.cpp  trade_markers.h
core/src/renderer/: frame_builder.cpp  frame_builder.h  label_builder.cpp  label_builder.h
core/src/viewport/: viewport.cpp  viewport.h
core/tests/: CMakeLists.txt  test_frame.cpp  test_indicator.cpp  test_main.cpp  test_perf.cpp  test_series.cpp  test_viewport.cpp
examples/ios-demo/: Project.swift
examples/ios-demo/Sources/: App.swift  ChartMetalView.swift  ContentView.swift  DemoData.swift
examples/ios-demo/Tuist/: Package.swift
scripts/: build_xcframework.sh
